--- a/docs/src/pyvgx/build.adoc
+++ b/docs/src/pyvgx/build.adoc
@@ -61,7 +61,7 @@ ___
 --
 [.left]
 <<../index.adoc#, icon:arrow-circle-up[size=2x, title="Index"]>>
-
+// cspell:ignore backtotop
 include::common/_backtotop.adoc[]
 --
 
