--- a/docs/src/pyvgx/constants/arcDirectionConstants.adoc
+++ b/docs/src/pyvgx/constants/arcDirectionConstants.adoc
@@ -78,7 +78,7 @@ ___
 <<constants.adoc#, icon:arrow-circle-up[size=2x, title="pyvgx Constants"]>>
 //icon:arrow-circle-right[size=2x, link=arcModifierConstants.adoc#, title="Arc Modifier Constants"]
 <<arcModifierConstants.adoc#, icon:arrow-circle-right[size=2x, title="Arc Modifier Constants"]>>
-
+// cspell:ignore backtotop
 include::../common/_backtotop.adoc[]
 --
 
