--- a/docs/src/pyvgx/constants/collectConstants.adoc
+++ b/docs/src/pyvgx/constants/collectConstants.adoc
@@ -60,7 +60,7 @@ ___
 <<constants.adoc#, icon:arrow-circle-up[size=2x, title="pyvgx Constants"]>>
 //icon:arrow-circle-right[size=2x, link=resultFieldConstants.adoc#, title="Result Field Constants"]
 <<resultFieldConstants.adoc#, icon:arrow-circle-right[size=2x, title="Result Field Constants"]>>
-
+// cspell:ignore backtotop
 include::../common/_backtotop.adoc[]
 --
 
