--- a/docs/src/pyvgx/constants/constants.adoc
+++ b/docs/src/pyvgx/constants/constants.adoc
@@ -30,7 +30,7 @@ ___
 <<../reference.adoc#, icon:arrow-circle-up[size=2x, title="pyvgx Reference"]>>
 //icon:arrow-circle-right[size=2x, link=arcDirectionConstants.adoc#, title="Arc Direction Constants"]
 <<arcDirectionConstants.adoc#, icon:arrow-circle-right[size=2x, title="Arc Direction Constants"]>>
-
+// cspell:ignore backtotop
 include::../common/_backtotop.adoc[]
 --
 
