--- a/docs/src/pyvgx/evaluator/selectEvaluator.adoc
+++ b/docs/src/pyvgx/evaluator/selectEvaluator.adoc
@@ -148,7 +148,7 @@ ___
 <<../reference.adoc#, icon:arrow-circle-up[size=2x, title="pyvgx Reference"]>>
 //icon:arrow-circle-right[size=2x, link=evaluator.adoc#, title="VGX Expression Language"]
 <<evaluator.adoc#, icon:arrow-circle-right[size=2x, title="VGX Expression Language"]>>
-
+// cspell:ignore backtotop
 include::../common/_backtotop.adoc[]
 --
 
