--- a/docs/src/pyvgx/graph/graphEnum.adoc
+++ b/docs/src/pyvgx/graph/graphEnum.adoc
@@ -229,7 +229,7 @@ ___
 <<graphManagement.adoc#, icon:arrow-circle-left[size=2x, title="Graph Management Methods"]>>
 <<graph.adoc#, icon:arrow-circle-up[size=2x, title="pyvgx Graph"]>>
 <<graphEvent.adoc#, icon:arrow-circle-right[size=2x, title="Graph Event Methods"]>>
-
+// cspell:ignore backtotop
 include::../common/_backtotop.adoc[]
 --
 
