--- a/docs/src/pyvgx/graph/graphMiscellaneous.adoc
+++ b/docs/src/pyvgx/graph/graphMiscellaneous.adoc
@@ -126,7 +126,7 @@ ___
 <<graphEvent.adoc#, icon:arrow-circle-left[size=2x, title="Graph Event Methods"]>>
 <<graph.adoc#, icon:arrow-circle-up[size=2x, title="pyvgx Graph"]>>
 <<graphMembers.adoc#, icon:arrow-circle-right[size=2x, title="Graph Members"]>>
-
+// cspell:ignore backtotop
 include::../common/_backtotop.adoc[]
 --
 
