--- a/docs/src/pyvgx/specification/arcSpecificationSyntax.adoc
+++ b/docs/src/pyvgx/specification/arcSpecificationSyntax.adoc
@@ -178,7 +178,7 @@ ___
 <<../reference.adoc#, icon:arrow-circle-up[size=2x, title="pyvgx Reference"]>>
 //icon:arrow-circle-right[size=2x, link=timeout.adoc#, title="Timeout"]
 <<timeout.adoc#, icon:arrow-circle-right[size=2x, title="Timeout"]>>
-
+// cspell:ignore backtotop
 include::../common/_backtotop.adoc[]
 --
 
