--- a/docs/src/pyvgx/similarity/similarity.adoc
+++ b/docs/src/pyvgx/similarity/similarity.adoc
@@ -30,7 +30,7 @@ ___
 <<../reference.adoc#, icon:arrow-circle-up[size=2x, title="pyvgx Reference"]>>
 //icon:arrow-circle-right[size=2x, link=vector.adoc#, title="pyvgx.Vector"]
 <<vector.adoc#, icon:arrow-circle-right[size=2x, title="pyvgx.Vector"]>>
-
+// cspell:ignore backtotop
 include::../common/_backtotop.adoc[]
 --
 
